--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-dash==0.19.0
-dash-renderer==0.11.1
-dash-html-components==0.8.0
-dash-core-components==0.14.0
-plotly==2.1.0
-gunicorn==19.7.1
+astroid==1.5.3
+haversine==0.4.5
+pandas==0.20.3
+python-telegram-bot==8.0
